--- a/app/src/main/res/layout/fragment_screen_login.xml
+++ b/app/src/main/res/layout/fragment_screen_login.xml
@@ -2,8 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/screen_login_progress_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/screen_login_text_view_title"
@@ -13,6 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         android:text="@string/login_account"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
 
@@ -22,6 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         android:hint="@string/login"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         android:hint="@string/password"
         android:inputType="text|textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/screen_login_edit_text_password"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/logon"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
