--- a/app/src/main/res/layout/fragment_screen_payments.xml
+++ b/app/src/main/res/layout/fragment_screen_payments.xml
@@ -12,7 +12,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp" />
+        android:padding="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/payments_progress_indicator"
