--- a/app/src/main/res/layout/view_card_payment.xml
+++ b/app/src/main/res/layout/view_card_payment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,24 +13,24 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/payment_card_text_view_title"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="Title"
             android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/payment_card_text_view_amount"
-            app:layout_constraintTop_toTopOf="@id/payment_card_text_view_title"
-            app:layout_constraintBottom_toBottomOf="@id/payment_card_text_view_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/payment_card_text_view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:text="0.002"/>
+            app:layout_constraintBottom_toBottomOf="@id/payment_card_text_view_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/payment_card_text_view_title"
+            app:layout_constraintTop_toTopOf="@id/payment_card_text_view_title"
+            app:layout_constraintVertical_bias="1.0" />
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
@@ -38,8 +39,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/payment_card_text_view_title"
             android:layout_marginTop="8dp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:text="01.01.2000"/>
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
