--- a/app/src/main/res/layout/fragment_screen_login.xml
+++ b/app/src/main/res/layout/fragment_screen_login.xml
@@ -15,38 +15,52 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/screen_login_edit_text_login"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/screen_login_text_input_layout_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:hint="@string/login"
-        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/screen_login_edit_text_password"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/screen_login_edit_text_login"
+            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/login"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/screen_login_text_input_layout_password"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
-        android:hint="@string/password"
-        android:inputType="text|textPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/screen_login_edit_text_login" />
+        app:layout_constraintTop_toBottomOf="@id/screen_login_text_input_layout_login">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/screen_login_edit_text_password"
+            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/password"
+            android:inputType="text|textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/screen_login_button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/screen_login_edit_text_password"
+        app:layout_constraintTop_toBottomOf="@id/screen_login_text_input_layout_password"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/logon"/>
