--- a/app/src/main/res/layout/fragment_screen_payments.xml
+++ b/app/src/main/res/layout/fragment_screen_payments.xml
@@ -14,7 +14,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        android:clipChildren="false"
+        android:clipToPadding="false" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/payments_progress_indicator"
