--- a/app/src/main/res/layout/fragment_screen_login.xml
+++ b/app/src/main/res/layout/fragment_screen_login.xml
@@ -65,4 +65,15 @@
         android:layout_marginEnd="16dp"
         android:text="@string/logon"/>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/screen_login_text_view_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+        android:textColor="?attr/colorError"
+        app:layout_constraintBottom_toBottomOf="@+id/screen_login_button_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/screen_login_button_login" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
